fix ccf and rea cols, wrap progress bar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,10 +99,19 @@ td {
 .led-success {
   color: #33aa00;
 }
+
+.bar-wrap {
+  position: relative;
+}
+
 .progress-marker {
   width: 2px;
   height: 10px;
   position: absolute;
   background: black;
-  bottom: 25px;
+  bottom: -5px;
+}
+
+.list-group-item {
+  margin-top: 15px;
 }
